# cmake_get_target

./: README.md  gameOption.hxx
myLib/: CMakeLists.txt
myLib/cmake/: myLibConfig.cmake.in  mylibConfig.cmake.in
myLib/myLib/: CMakeLists.txt  calc.cxx  calc.hxx  lobby.cxx  lobby.hxx
use_my_lib_in_another_project/: CMakeLists.txt  main.cxx
